# EMP-Seminarska

./: .gitignore  README.md  package-lock.json
avantis-mobile/: .babelrc  app.json  package-lock.json  package.json  tsconfig.json  types.ts
avantis-mobile/app/: _layout.tsx  index.tsx  login.tsx  men.tsx  register.tsx  women.tsx
avantis-mobile/app/cart/: index.tsx
avantis-mobile/app/products/: [id].tsx  filter.tsx  index.tsx
avantis-mobile/app/profile/: login.tsx  orders.tsx  profile_page.tsx  register.tsx  sign_in.tsx
avantis-mobile/components/: OrderItem.tsx  Product.tsx  ShoppingCartItem.tsx
avantis-mobile/components/navigation/: NavbarSettings.tsx
avantis-mobile/context/: AuthContext.ts  CartContext.ts
avantis-mobile/reducers/: AuthReducer.ts  CartReducer.ts
backend/emp-backend/: Cargo.toml
backend/emp-backend/src/: main.rs
backend/emp-backend/src/models/: cart.rs  filters.rs  mod.rs  order.rs  product.rs  user.rs
backend/emp-backend/src/routes/: cart_route.rs  filter_route.rs  mod.rs  order_route.rs  product_route.rs  user_route.rs
backend/emp-backend/src/services/: db.rs  mod.rs  util.rs
scraper/: main.py  pyproject.toml
